@@ -1,5 +1,4 @@
 FROM openjdk:8-jdk-alpine
 ADD target/projetuc.jar projetuc.jar
 EXPOSE 9091
-ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap  -XX:MaxRAMFraction=1 -XshowSettings:vm "
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar projetuc.jar" ]
+ENTRYPOINT ["java","-jar","projetuc.jar"]
